# CTC

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO.md  benchmark-model-logits.py  benchmark-random-logits.py  build.py  build.sh  pyproject.toml  setup.py  test-assumption.py  test.py  test2.py  test3.py
include/zctc/: constants.hh  decoder.hh  ext_scorer.hh  node.hh  trie.hh  zfst-2.hh  zfst.hh
src/: binding.cpp  defaults.hh  main  main.cpp
tests/: conftest.py  test_ctc_beam_decoder.py  test_ctc_beam_decoder_fst.py  test_ctc_beam_decoder_strict.py  test_integration.py  test_performance.py
zctc/: __init__.py
zctc/include/zctc/: constants.hh  decoder.hh  ext_scorer.hh  node.hh  utils.hh  zfst.hh
zctc/lib/: binding.cpp
