[tool.poetry]
name = "zctc"
version = "0.1.0"
description = "Beam search CTC decoder repo"
authors = ["DurgaiVS <durgaivel0309@gmail.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = ">=2.1"
numpy = "*"
pylint = "*"
pre-commit = "*"
black = "*"
isort = "*"
clang-format = "*"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "wheel", "requests", "poetry-core>=1.0.0"]
