[tool.poetry]
name = "zctc"
version = "0.1.0"
description = "Beam search CTC decoder repo"
authors = ["DurgaiVS <durgaivel0309@gmail.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.10.6"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp310-cp310-linux_x86_64.whl" }
numpy = "1.23.5"
omegaconf = "*"
registrable = "*"

[tool.poetry.dev-dependencies]
pylint = "*"
pre-commit = "*"
black = "*"
isort = "*"
clang-format = "*"
requests = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "wheel", "requests", "poetry-core>=1.0.0"]
