[tool.poetry]
name = "zctc"
version = "0.1.0"
description = "A fast and efficient CTC beam decoder with C++ backend."
authors = ["DurgaiVelSelvan <durgaivel0309@gmail.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9.0"
torch = "^2.2.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pylint = "*"
pre-commit = "*"
black = "*"
isort = "*"
clang-format = "*"
requests = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "wheel", "requests", "poetry-core>=1.0.0"]
